# rocknbot

./: .gitignore  ReleaseNotes.md
.github/workflows/: ci.yaml
LilLisa_Server/: .gitignore  ChunkingStrategy_Implementation_Summary.md  README.md  environment.yml  makefile  pyproject.toml  test_chunking_strategy.py
LilLisa_Server/data/prompts/: qa_system_prompt.txt
LilLisa_Server/lancedb/IDA.lance/_indices/fts/: .managed.json  meta.json
LilLisa_Server/lancedb/IDA.lance/_indices/tantivy/: .managed.json  meta.json
LilLisa_Server/lancedb/IDA_QA_PAIRS.lance/_transactions/: 0-1c6c4b21-28eb-46dd-9e8b-7f0a0ae4f4a2.txn  1-5c043563-09d2-4cf0-b63d-08162357cace.txn
LilLisa_Server/lancedb/IDA_QA_PAIRS.lance/_versions/: 1.manifest  2.manifest
LilLisa_Server/lancedb/IDA_QA_PAIRS.lance/data/: 70f86872-3fc4-4dc5-b5a7-9be44dbfc94c.lance
LilLisa_Server/lancedb/IDDM.lance/_indices/fts/: .managed.json  meta.json
LilLisa_Server/lancedb/IDDM.lance/_indices/tantivy/: .managed.json  meta.json
LilLisa_Server/src/: agent_and_tools.py  lillisa_server_context.py  llama_index_lancedb_vector_store.py  main.py  observability.py  utils.py
lil-lisa/: .gitignore  README.md  makefile
lil-lisa-web/: .gitignore  README.md  environment.yml  lil-lisa-web.env  main.py  makefile  pyproject.toml
lil-lisa-web/docs/: design.md  login_convhistory_server_impl_plan.md  login_convhistory_ui_impl_plan.md  requirements.md
lil-lisa-web/templates/: index.html
lil-lisa/src/: slack.py
lil-lisa/tools/: slack_harvester.py
scripts/: past_func_prd.txt  prd.txt
