[project]
name = "LilLisa_Server"
version = "2.6.2"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch",
    "fastapi==0.115.12",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.0",
    "boto3==1.34.147",
    "lancedb==0.21.1",
    "llama-index>=0.14.14",
    "llama-index-vector-stores-lancedb>=0.4.0",
    "gitpython==3.1.43",
    "platformdirs==4.2.0",
    "mangum==0.17.0",
    "openai>=1.108.1,<2",
    "sentence-transformers==3.0.1",
    "speedict==0.3.12",
    "tiktoken==0.7.0",
    "uvicorn==0.34.2",
    "litellm==1.63.14",
    "python-json-logger==3.3.0",
    "opentelemetry-api==1.33.0",
    "opentelemetry-sdk==1.33.0",
    "opentelemetry-instrumentation-fastapi==0.54b0",
    "opentelemetry-exporter-otlp==1.33.0",
    "voyageai==0.3.4",
]

[project.optional-dependencies]
dev = [
    "isort==5.12.0",
    "black==23.1.0",
    "flake8==6.0.0",
    "pylint==2.16.1",
    "mypy==1.0.0",
    "bandit[toml]==1.7.4",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]
index-strategy = "unsafe-best-match"

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "dotenv"]
known_first_party = ["shared"]
known_local_folder = ["src"]

[tool.black]
line-length = 119

[tool.pylint.messages_control]
max-line-length = 119
disable = ["line-too-long", "import-error", "R0801"]
ignored-classes = "scoped_session"

[tool.pylint.MASTER]
ignore-paths = ["^test/FOLDER_TO_IGNORE/.*$"]
extension-pkg-whitelist = ["pydantic"]

[tool.mypy]
exclude = 'FOLDER_TO_IGNORE'

[[tool.mypy.overrides]]
module = [
    "zendesk",
    "utils"
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["test"]
