[project]
name = "lil-lisa-web"
version = "2.4.1"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-fasthtml",
    "requests==2.31.0",
    "pyjwt==2.8.0",
    "uvicorn>=0.29",
    "flask==3.1.0",
    "flask[async]",
    "python-dotenv==1.0.1",
    "werkzeug==3.1.3",
]

[project.optional-dependencies]
dev = [
    "isort==5.12.0",
    "black==23.1.0",
    "flake8==6.0.0",
    "pylint==2.16.1",
    "mypy==1.0.0",
    "bandit[toml]==1.7.4",
]
prod = [
    "gunicorn==23.0.0",
]

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "dotenv"]
known_first_party = ["shared"]
known_local_folder = ["src"]

[tool.black]
line-length = 119

[tool.pylint.messages_control]
max-line-length = 119
disable = ["line-too-long", "import-error", "R0801"]
ignored-classes = "scoped_session"

[tool.pylint.MASTER]
ignore-paths = ["^test/FOLDER_TO_IGNORE/.*$"]
extension-pkg-whitelist = ["pydantic"]

[tool.mypy]
exclude = 'FOLDER_TO_IGNORE'

[[tool.mypy.overrides]]
module = ["utils"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["test"]
